# googletest_sample

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  maths.cpp  maths.h
test/: CMakeLists.txt  math_test.cpp
